Vertex Parenting & Triangle Vertex Parenting causes segfaults. #38421

Closed
opened 2014-01-31 17:41:40 +01:00 by Terry Wallwork · 9 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender 2.69 GIT REV 2014-01-31-09-35-00-d291d15
on a Fedora 20 Linux 64Bit Box.

I noticed the Blender segfaults when I Vertex Parent (single or triangle)
several objects to a single Parent object and then tab into Edit Mode on that
Parent Object.

In the attached a Blend file, It has 5 cone objects (child objects) and a Cube
(Parent Object). If I select all the cone objects and then shift select the
cube object and then parent them with CTRL P and select Vertex parent.
Once all the cones have been vertex parented to the cube, with the cube
still selected TAB in an out of edit Mode repeatedly.

For me Blender will segfault when this is done. This also happens with
Triangle Vertex Parenting.

It can happen with fewer objects acting as children but it is harder to make
happen but I have had it happen with just 2 child objects. Also moving
the cube in edit mode when the cones are vertex parented can also sometimes
crash it.

I have attached my system-info.txt file, a backtrace, a blend file to test with
and a video demo file.

system-info.txt

backtrace.txt

ParentingVertexAndTriangleCrash.blend

VertexSingleAndTriangleParentingCrash.mkv

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender 2.69 GIT REV 2014-01-31-09-35-00-d291d15 on a Fedora 20 Linux 64Bit Box. I noticed the Blender segfaults when I Vertex Parent (single or triangle) several objects to a single Parent object and then tab into Edit Mode on that Parent Object. In the attached a Blend file, It has 5 cone objects (child objects) and a Cube (Parent Object). If I select all the cone objects and then shift select the cube object and then parent them with CTRL P and select Vertex parent. Once all the cones have been vertex parented to the cube, with the cube still selected TAB in an out of edit Mode repeatedly. For me Blender will segfault when this is done. This also happens with Triangle Vertex Parenting. It can happen with fewer objects acting as children but it is harder to make happen but I have had it happen with just 2 child objects. Also moving the cube in edit mode when the cones are vertex parented can also sometimes crash it. I have attached my system-info.txt file, a backtrace, a blend file to test with and a video demo file. [system-info.txt](https://archive.blender.org/developer/F75713/system-info.txt) [backtrace.txt](https://archive.blender.org/developer/F75712/backtrace.txt) [ParentingVertexAndTriangleCrash.blend](https://archive.blender.org/developer/F75714/ParentingVertexAndTriangleCrash.blend) [VertexSingleAndTriangleParentingCrash.mkv](https://archive.blender.org/developer/F75715/VertexSingleAndTriangleParentingCrash.mkv)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

Added subscriber: @mont29

Added subscriber: @mont29

From a very quick look, this is due to some bmesh having all its vtable pointers set to NULL… Not sure what happens, maybe another threading issue?

From a very quick look, this is due to some bmesh having all its vtable pointers set to NULL… Not sure what happens, maybe another threading issue?
Sergey Sharybin self-assigned this 2014-02-03 13:48:07 +01:00

Yes it is. Will look into it.

Yes it is. Will look into it.

This issue was referenced by blender/blender-addons-contrib@d484eb8c25

This issue was referenced by blender/blender-addons-contrib@d484eb8c25137d7ecb9d722e593e7b70cedad458

This issue was referenced by d484eb8c25

This issue was referenced by d484eb8c25137d7ecb9d722e593e7b70cedad458

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d484eb8c25.

Closed by commit d484eb8c25.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38421
No description provided.